--- a/addEditCoffeeForm.ui
+++ b/addEditCoffeeForm.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>427</width>
-    <height>382</height>
+    <height>403</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,13 +18,13 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>280</y>
+      <y>290</y>
       <width>341</width>
       <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>Изменить сотав.</string>
+     <string>Изменить сотав</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit">
@@ -163,6 +163,32 @@
     </property>
     <property name="text">
      <string>Size</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>14</x>
+      <y>260</y>
+      <width>451</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Для изменения, напишите имя изменяемого кофе из таблицы.</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>340</y>
+      <width>481</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
